@@ -8,6 +8,15 @@ Release history for Test-File-ShareDir
  - runtime: (recommends: +1)
  - test: +1 (recommends: ↑1 ↓1)
 
+ [Deprecations]
+ - OO interfaces have a ->add_to_inc method which is being replaced with the more generic ->register, which wil retain
+   meaning when the interface no longer actually uses @INC
+
+ [Features]
+ - Add a new -clearer attribute to importer interfaces that accepts a ref to a scalar that will be vivified to a
+   coderef which allows removal from @INC
+ - OO interfaces now all have a ->register and a ->clear method.
+
 1.000005 2014-08-15T23:41:58Z
  [00 Trivial]
  - CPANDAY!
